--- a/GameCollitions/build-templates/web-mobile/index.html
+++ b/GameCollitions/build-templates/web-mobile/index.html
@@ -48,6 +48,9 @@
       <span style="width: 0%;"></span>
     </div>
   </div>
+  <script>
+    window["CELER_X"] = false;
+  </script>
   <script type="text/javascript">
     "use strict";
 
@@ -374,8 +377,6 @@
           return _provideCurrentFrameData.callback();
         },
       })();
-    window.CC_HTML = false;
-    window.CELER_X = true;
   </script>
   <script src="src/settings.js" charset="utf-8"></script>
   <%=webDebugger%>
