--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
         },
       })();
   </script>
-  <script src="src/settings.d7318.js" charset="utf-8"></script>
+  <script src="src/settings.83092.js" charset="utf-8"></script>
   <%=webDebugger%>
-  <script src="main.1f4c5.js" charset="utf-8"></script>
+  <script src="main.80329.js" charset="utf-8"></script>
 
   <script type="text/javascript">
     (function () {
