--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
         },
       })();
   </script>
-  <script src="src/settings.60de3.js" charset="utf-8"></script>
+  <script src="src/settings.2276e.js" charset="utf-8"></script>
   <%=webDebugger%>
-  <script src="main.33a6d.js" charset="utf-8"></script>
+  <script src="main.69bf4.js" charset="utf-8"></script>
 
   <script type="text/javascript">
     (function () {
