--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
   </script>
   <script src="src/settings.6ac52.js" charset="utf-8"></script>
   <%=webDebugger%>
-  <script src="main.06fcb.js" charset="utf-8"></script>
+  <script src="main.d4051.js" charset="utf-8"></script>
 
   <script type="text/javascript">
     (function () {
